--- a/AroundTheMetro/View/Base.lproj/Main.storyboard
+++ b/AroundTheMetro/View/Base.lproj/Main.storyboard
@@ -56,7 +56,7 @@
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" image="facebook_login_img" translatesAutoresizingMaskIntoConstraints="NO" id="w5h-ek-XvG">
-                                <rect key="frame" x="85" y="410" width="47" height="47"/>
+                                <rect key="frame" x="85" y="409.5" width="47" height="47"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="47" id="QDp-i4-3kW"/>
                                     <constraint firstAttribute="width" constant="47" id="ry9-XF-oMV"/>
@@ -115,63 +115,37 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cities" translatesAutoresizingMaskIntoConstraints="NO" id="i7E-q2-fxb">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                            </imageView>
-                            <visualEffectView opaque="NO" alpha="0.69999998807907104" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DJ9-PV-aJk">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="2wA-NQ-cm5">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                    <subviews>
-                                        <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XaI-BH-YQh">
-                                            <rect key="frame" x="8" y="50" width="359" height="200"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="200" id="XMX-2u-7aV"/>
-                                            </constraints>
-                                        </pickerView>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IPe-yV-E2s">
-                                            <rect key="frame" x="152" y="370" width="70" height="36"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                            <state key="normal" title="Confirm">
-                                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                            </state>
-                                            <connections>
-                                                <action selector="btnConfirmTapped:" destination="tkD-Oz-ZKP" eventType="touchUpInside" id="3zn-z7-JyC"/>
-                                            </connections>
-                                        </button>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select Country And City" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oxz-uh-VhA">
-                                            <rect key="frame" x="96" y="300" width="183" height="20"/>
-                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
-                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                    <constraints>
-                                        <constraint firstItem="IPe-yV-E2s" firstAttribute="top" secondItem="oxz-uh-VhA" secondAttribute="bottom" constant="50" id="EOe-Ci-NKB"/>
-                                        <constraint firstAttribute="trailing" secondItem="XaI-BH-YQh" secondAttribute="trailing" constant="8" id="S7m-tN-Pl8"/>
-                                        <constraint firstItem="IPe-yV-E2s" firstAttribute="centerX" secondItem="2wA-NQ-cm5" secondAttribute="centerX" id="Szv-VW-8Kf"/>
-                                        <constraint firstItem="XaI-BH-YQh" firstAttribute="top" secondItem="2wA-NQ-cm5" secondAttribute="top" constant="50" id="XGn-O0-Laa"/>
-                                        <constraint firstItem="oxz-uh-VhA" firstAttribute="top" secondItem="XaI-BH-YQh" secondAttribute="bottom" constant="50" id="caJ-IC-GYb"/>
-                                        <constraint firstItem="IPe-yV-E2s" firstAttribute="centerX" secondItem="2wA-NQ-cm5" secondAttribute="centerX" id="kAu-cW-zFI"/>
-                                        <constraint firstItem="XaI-BH-YQh" firstAttribute="leading" secondItem="2wA-NQ-cm5" secondAttribute="leading" constant="8" id="sda-fT-hvb"/>
-                                        <constraint firstItem="oxz-uh-VhA" firstAttribute="centerX" secondItem="2wA-NQ-cm5" secondAttribute="centerX" id="u2f-5F-v8g"/>
-                                    </constraints>
-                                </view>
-                                <blurEffect style="dark"/>
-                            </visualEffectView>
+                            <view opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xsi-IM-YPM">
+                                <rect key="frame" x="0.0" y="20" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IPe-yV-E2s">
+                                        <rect key="frame" x="133" y="401" width="123" height="43"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" red="0.0" green="0.97680455450000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <state key="normal" title="Confirm">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="btnConfirmTapped:" destination="tkD-Oz-ZKP" eventType="touchUpInside" id="3zn-z7-JyC"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Select Country And City" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oxz-uh-VhA">
+                                        <rect key="frame" x="54" y="330" width="281" height="37"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <pickerView autoresizesSubviews="NO" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleAspectFit" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XaI-BH-YQh">
+                                        <rect key="frame" x="8" y="101" width="359" height="200"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </pickerView>
+                                </subviews>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="i7E-q2-fxb" firstAttribute="leading" secondItem="6li-ub-XUM" secondAttribute="leading" id="1B8-i2-B72"/>
-                            <constraint firstItem="DJ9-PV-aJk" firstAttribute="leading" secondItem="6li-ub-XUM" secondAttribute="leading" id="1ss-9K-qQK"/>
-                            <constraint firstItem="i7E-q2-fxb" firstAttribute="top" secondItem="FNV-Hy-1JF" secondAttribute="top" id="IHQ-9q-hzN"/>
-                            <constraint firstItem="DJ9-PV-aJk" firstAttribute="trailing" secondItem="6li-ub-XUM" secondAttribute="trailing" id="MRU-si-9VO"/>
-                            <constraint firstItem="DJ9-PV-aJk" firstAttribute="top" secondItem="FNV-Hy-1JF" secondAttribute="top" id="MfD-JD-Hi5"/>
-                            <constraint firstItem="i7E-q2-fxb" firstAttribute="trailing" secondItem="6li-ub-XUM" secondAttribute="trailing" id="T77-Ox-PtB"/>
-                            <constraint firstItem="DJ9-PV-aJk" firstAttribute="bottom" secondItem="6li-ub-XUM" secondAttribute="bottom" id="e6v-Bb-dnZ"/>
-                            <constraint firstItem="i7E-q2-fxb" firstAttribute="bottom" secondItem="6li-ub-XUM" secondAttribute="bottom" id="szv-qY-tjd"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6li-ub-XUM"/>
                     </view>
                     <toolbarItems/>
@@ -190,7 +164,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YO6-Sl-xHL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3554" y="-1002"/>
+            <point key="canvasLocation" x="3552.8000000000002" y="-1002.5487256371815"/>
         </scene>
         <!--Item-->
         <scene sceneID="Y8t-NV-VCX">
@@ -207,7 +181,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rdM-1k-p9U" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3553" y="-305"/>
+            <point key="canvasLocation" x="3686" y="-4"/>
         </scene>
         <!--Home-->
         <scene sceneID="UUv-SJ-5Pe">
@@ -229,7 +203,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="0wt-la-nbD" customClass="InfiniteCollectionView" customModule="AroundTheMetro" customModuleProvider="target">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="183"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="183.5"/>
                                                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="dpd-QF-TWh">
                                                         <size key="itemSize" width="50" height="50"/>
@@ -239,7 +213,7 @@
                                                     </collectionViewFlowLayout>
                                                     <cells>
                                                         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImageCollectionViewCell" id="3ke-CH-psH" customClass="ImageCollectionViewCell" customModule="AroundTheMetro" customModuleProvider="target">
-                                                            <rect key="frame" x="0.0" y="1.5" width="375" height="180"/>
+                                                            <rect key="frame" x="0.0" y="2" width="375" height="180"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                                                 <rect key="frame" x="0.0" y="0.0" width="375" height="180"/>
@@ -264,7 +238,7 @@
                                                     </cells>
                                                 </collectionView>
                                                 <pageControl opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="10" translatesAutoresizingMaskIntoConstraints="NO" id="Bg4-w5-M14">
-                                                    <rect key="frame" x="0.0" y="126" width="375" height="37"/>
+                                                    <rect key="frame" x="0.0" y="126.5" width="375" height="37"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="37" id="2VK-Wp-t8k"/>
                                                     </constraints>
@@ -733,7 +707,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="68T-ky-XZA">
-                                                    <rect key="frame" x="87" y="22" width="273" height="21"/>
+                                                    <rect key="frame" x="87" y="22.5" width="273" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -862,7 +836,7 @@
                                         </constraints>
                                     </stackView>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="I5S-yD-ScH">
-                                        <rect key="frame" x="21" y="309" width="293" height="100"/>
+                                        <rect key="frame" x="27.5" y="309" width="280" height="100"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="100" id="H9o-VE-W8p"/>
@@ -1015,7 +989,7 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Around " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="McU-hc-qcb">
-                                <rect key="frame" x="146.5" y="235" width="83" height="27"/>
+                                <rect key="frame" x="146" y="235" width="83" height="27"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="27" id="7AS-1o-w0S"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="83" id="9Yo-oh-pa3"/>
@@ -1025,7 +999,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The Metro" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rIw-at-Igd">
-                                <rect key="frame" x="122.5" y="258" width="131" height="21"/>
+                                <rect key="frame" x="122" y="258" width="131" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="Gbu-cm-hcU"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="131" id="JQE-1Q-LDT"/>
@@ -1118,7 +1092,6 @@ Find everything you need in a short walking distance from any metro system in th
         <image name="avatar" width="128" height="128"/>
         <image name="avatar-1" width="239" height="238"/>
         <image name="boutique-listicon" width="384" height="384"/>
-        <image name="cities" width="640" height="960"/>
         <image name="email" width="114" height="114"/>
         <image name="email-button" width="64" height="64"/>
         <image name="facebook" width="114" height="114"/>
